# Inventory-Management-System

./: .gitignore  Accounts.cpp  Accounts.h  CMakeLists.txt  Database.cpp  Database.h  Headers.h  Inventory Management System.sln  Inventory Management System.vcxproj  Inventory Management System.vcxproj.filters  Inventory.cpp  Inventory.h  Item.h  README.md  SQL_database.sql  User.h  Workspace.code-workspace  main.cpp  math.py  user_declaration.h  user_system.cpp  user_system.h
Data/: Test01_inventory_data.txt  alejandrovc_inventory_data.txt  inventory_data.txt  users.txt
Source Code/: Accounts.cpp  Accounts.h  Headers.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  User.cpp  User.h  inventory-system.cpp  main.cpp  user_declaration.h  user_system.cpp
Src/: Accounts.cpp  Accounts.h  Headers.h  Item.cpp  User.cpp  Window.cpp  Window.h  inventory_system  main.cpp  user_system.cpp
include/: Accounts.h  Database.h  Headers.h  Inventory.h  Item.h  User.h  Window.h  main.h  mainfunctions.h  user_declaration.h
src/: Accounts.cpp  Database.cpp  Item.cpp  User.cpp  main.cpp  user_system.cpp
